Expanded scrollbar. Fixes #8.

--- a/web/src/app/app.component.css
+++ b/web/src/app/app.component.css
@@ -74,7 +74,7 @@
   background-color: rgb(255, 67, 55);
 }
 
-.window, .bookNow, .scheduleEvent, .cancelEvent {
+.window, .bookNow, .scheduleEvent {
   background-size: 800px 480px;
   background: url("assets/YMountain.png");
   display: block;
@@ -238,7 +238,7 @@ li{
 ::-webkit-scrollbar-track,
 ::-webkit-scrollbar-thumb {
 	/*border: 16px solid rgba(255,255,255,0);*/
-  border: 7px solid rgba(255,255,255,0);
+  border: 11px solid rgba(255,255,255,0);
 
 	background-clip: padding-box;
 }
@@ -278,6 +278,10 @@ li{
   top: 0;
   width: 800px;
   z-index: 9000;
+}
+
+.cancelNowButton {
+  display: none;
 }
 
 .cancelEvent-message-background {
